# alpaca-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  account.py  audit_log.py  backtest.py  config.py  dex_data.py  dex_strategy.py  env.template  execution_store.py  indicators.py  main.py  market_data.py  mcp_server.py  net.py  policy.py  polygon_data.py  pyproject.toml  requirements.txt  risk.py  sentiment.py  strategy.py  strategy_library.py  trader.py
.github/workflows/: ci-tests.yml  eod-snapshot.yml  majors-scanner.yml
core/: audit.py  kill_switch.py  notifications.py  phase.py  risk_gates.py  sizing.py  types.py
docs/superpowers/plans/: 2026-05-03-foundation.md  2026-05-04-majors-leg.md
docs/superpowers/specs/: 2026-05-03-crypto-trading-bot-design.md
majors/: __init__.py  alpaca_client.py  eod.py  executor.py  scanner.py  strategy.py  trail.py
memory/: KILL-SWITCH.md  MEMECOIN-WATCHLIST.md  MONITOR-LOG.md  PHASE.md  PROJECT-CONTEXT.md  RESEARCH-LOG.md  TRADE-LOG.md  TRADING-STRATEGY.md  WEEKLY-REVIEW.md
routines/: README.md  daily-summary.md  pre-market-research.md
scripts/: alpaca.sh  telegram.sh
tests/: conftest.py  test_alpaca_client.py  test_audit.py  test_kill_switch.py  test_majors_eod.py  test_majors_executor.py  test_majors_scanner.py  test_majors_strategy.py  test_majors_trail.py  test_notifications.py  test_phase.py  test_risk_gates.py  test_sizing.py  test_types.py
tests/fixtures/: alpaca_account.json  alpaca_bars_btc.json  alpaca_order_filled.json  alpaca_positions.json  alpaca_quote_btc.json  alpaca_stop_limit.json
